pkg/synthesis/tests_expected_output/optimization_level_tests/ExampleAppWithGroupsAndSegments_moderate/k8s_resources/pods.yaml
apiVersion: v1
kind: Pod
metadata:
    labels:
        group__bar-app: "true"
        group__research-app: "true"
        group__research-seg-1: "true"
        group__research-test-expr-2: "true"
        in_Segment__T1-192-168-1-0: "true"
    name: New-VM-1
    namespace: T1-192-168-1-0
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    labels:
        group__bar-app: "true"
        group__research-app: "true"
        in_Segment__T1-192-168-1-0: "true"
    name: New-VM-2
    namespace: T1-192-168-1-0
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    labels:
        group__foo-app: "true"
        group__foo-frontend: "true"
        group__research-app: "true"
        group__research-seg-1: "true"
        in_Segment__T1-192-168-0-0: "true"
    name: New-VM-3
    namespace: T1-192-168-0-0
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    labels:
        group__foo-app: "true"
        group__foo-backend: "true"
        group__research-app: "true"
        group__research-seg-1: "true"
        in_Segment__T1-192-168-0-0: "true"
    name: New-VM-4
    namespace: T1-192-168-0-0
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    labels:
        group__bar-app: "true"
        group__research-app: "true"
        in_Segment__T1-192-168-1-0: "true"
    name: NewVirtualMachine
    namespace: T1-192-168-1-0
spec:
    containers: null
status: {}
